Modified HTML and SCSS files to solve some contrast color problems. Modified the scroll-up function again to make it work in the deployed website.

--- a/src/assets/styles/layouts/_activities.scss
+++ b/src/assets/styles/layouts/_activities.scss
@@ -5,10 +5,10 @@
 .activity {
     &--highlighted {
       color: $main-green;
-      font-weight: 700;
+      font-weight: 800;
 
       @include md {
-        color: color.adjust($secondary-red, $lightness: 5%);
+        color: $links-color;
       }
     }
 
