--- a/src/assets/styles/layouts/_tokyo-stay.scss
+++ b/src/assets/styles/layouts/_tokyo-stay.scss
@@ -46,8 +46,8 @@
         }  
 
         &--highlighted {
-            color: color.adjust($secondary-red, $lightness: 5%);
-            font-weight: 700;
+            color: $links-color;
+            font-weight: 800;
         }
     }
 
